# realmeye.py

./: .gitignore  404.html  CODEOWNERS  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docs.yml
credits/: index.html
docs/: credits.md  equipment.md  functions.md  guild.md  index.md  installation.md  player.md
functions/: index.html
guild/: index.html
installation/: index.html
player/: index.html
realmeye/: __init__.py  main.py
realmeye/constants/: __init__.py  exceptions.py  routes.py
realmeye/models/: __init__.py  character.py  equipment.py  guild.py  player.py
realmeye/parser/: __init__.py  equipment.py  guild.py  player.py
realmeye/scraper/: __init__.py  equipment.py  guild.py  player.py
search/: search_index.json
templates/: bug-template.md
tests/: test_player_parser.py
